--- a/HTML/index.html
+++ b/HTML/index.html
@@ -27,7 +27,7 @@
     <body>
 
         <!--========== PAGE LAYOUT ==========-->
-
+    <main class="main">
         <nav class="nav__cont">
             <ul class="nav">
                 <li class="nav__items--header">
@@ -108,8 +108,8 @@
             </ul>
         </nav>
 
-        <!-- Main page-->
-        <main class="main">
+        <!-- Main block-->
+        <section class="main-block">
             <div class="container">
                 <header class="header">
                     <div class="login">
@@ -342,8 +342,8 @@
                     </form>
                 </div>
             </div>
-        </main>
-    
+        </section>
+    </main>
         <!-- ADD JQUERY HERE -->
         <script src="js/components/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
         <!-- Main.js -->
